trying to fix clipping

--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -30,9 +30,10 @@
     font-size: 50px;
     display: block;
     line-height: 1;
+    margin-top: 5px;
     color: #FFF;
     @media only screen and (min-width:$cut){
-      margin: 0;
+      margin: 1px;
       font-size: 76px;
     }
   }
